"Update next.config.js, pages/index.tsx, and styles/globals.css to replace 'ohclips' with 'mewstify' and update image sources and styles."

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,7 +39,7 @@ body::-webkit-scrollbar {
 .bg-banner {
   background-size: cover;
   background-position: center;
-  background-image: url(/ds.gif);
+  background-image: url(/lrmnbanner.gif);
 }
 
 #snackbar {
