Added CSS styles for customizing scrollbar appearance

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -83,3 +83,19 @@ body::-webkit-scrollbar {
   from {top: 20px; opacity: 1;}
   to {top: -30px; opacity: 0;}
 }
+
+/* Untuk browser yang mendukung scrollbar-width */
+/* Membuat scrollbar lebih tipis */
+::-webkit-scrollbar {
+  width: 8px; /* Atur lebar scrollbar */
+}
+
+/* Warna scrollbar */
+::-webkit-scrollbar-thumb {
+  background-color: #383434; /* Warna scrollbar */
+  border-radius: 4px; /* Atur radius sudut scrollbar */
+}
+
+/* Untuk browser yang tidak mendukung scrollbar-width */
+/* Membuat scrollbar lebih tipis */
+scrollbar-width: thin;
